[package]
name = "kronark-node-viewer"
version = "0.1.0"
edition = "2021"

[workspace]
members=["kronark-node-parser", "kronark-node-tui"]
[dependencies]
kronark-node-parser = {path = "./kronark-node-parser"}
kronark-node-tui = {path = "./kronark-node-tui"}
clap = {version = "4.5.20", features = ["derive"]}
clap-stdin = { version = "0.5.1", features = ["clap"] }
